More cleanup + api changes
